--- a/2. Web/2. django/1. Django.md
+++ b/2. Web/2. django/1. Django.md
@@ -30,7 +30,9 @@
 
 #### 1.1 환경설정
 
- `C9 Settings.md` 을 따라 한후
+ ~~`C9 Settings.md` 을 따라 한후~~
+
+`0. Django Local Setting`을 따라 한 후
 
 ```bash
 pyenv virtualenv django-venv
@@ -40,7 +42,7 @@ pyenv virtualenv django-venv
 pyenv local django-venv
 ```
 
-![1-1](.\8. Picture\1-1.PNG)
+![1-1](../..\8. Picture\1-1.PNG)
 
 완료 후 아래 명령어 입력
 
@@ -56,7 +58,7 @@ django-admin startproject django_intro
 
 > `startproject`를 할때만 `django-admin`이라는 이름으로 `django_intro`폴더를 생성한다.
 
-`django_intro`폴더가 생성이 되는데 그 폴더가 앞으로 프로젝트를 관리할 폴더가 된다.
+`django_intro`폴더가 생성이 되는데 그 폴더가 앞으로 프로젝트를 관리할 폴더py가 된다.
 
 ```
 workspacename/
@@ -92,6 +94,14 @@ cd django_intro/
 아래의 명령어를 입력해 서버 실행
 
 ```bash
+$ python manage.py runserver
+```
+
+localhost:8000으로 접속이 가능하다.
+
+~~c9의 경우에는 아래 명령어 실행~~
+
+```bash
 $ python manage.py runserver 0.0.0.0:8080
 ```
 
@@ -99,7 +109,7 @@ $ python manage.py runserver 0.0.0.0:8080
 
 실행한 화면
 
-![1-3](8. Picture\1-3.PNG)
+![1-3](../../8. Picture\1-3.PNG)
 
 #### 1.3 추가설정
 
@@ -155,7 +165,21 @@ $ vi .gitignore
 
 `TIME_ZONE` : 'Asia/Seoul'
 
-##### 2.1.2 urls.py
+##### 2.1.2 app 시작하기
+
+```bash
+$ python manage.py startapp home
+```
+
+을 입력하면 home이라는 폴더가 생성된다.
+
+```
+어디있는지 몰라서 여기다 씀
+$ python manage.py makemigrations
+$ python manage.py migrate
+```
+
+##### 2.1.3 urls.py
 
 flask에서 @app.route로 했던 내용들이 이제 이곳에 들어간다.
 
@@ -170,20 +194,6 @@ urlpatterns = [
 ```
 
 위의 코드를 한 세트라고 생각하자.
-
-##### 2.1.3 app 시작하기
-
-```bash
-$ python manage.py startapp home
-```
-
-을 입력하면 home이라는 폴더가 생성된다.
-
-```
-어디있는지 몰라서 여기다 씀
-$ python manage.py makemigrations
-$ python manage.py migrate
-```
 
 ##### 2.1.4 view.py
 
@@ -242,7 +252,7 @@ def index(request):
    <h1> {{dinner}} </h1>
    ```
 
-![1-4](./8. Picture/1-4.jpg)
+![1-4](../../8. Picture/1-4.jpg)
 
 
 
@@ -518,7 +528,7 @@ TEMPLATES = [
 $ python manage.py createsuperuser
 ```
 
-![django_1](image\django_1.PNG)
+![django_1](../../image\django_1.PNG)
 
 `admin.py`에 `models.py`에 있는 모델을 등록해준다.
 
@@ -1009,6 +1019,8 @@ class Movie(models.Model):
 #### 10.5 get_object_or_404 함수
 
 오브젝트를 가져와서 있으면 요청대로 처리하고 없으면 404에러를 반환하는 함수.
+
+`django.shortcuts import get_object_or_404`
 
 ```python
 def update(request, board_pk):
