--- a/2. Web/2. django/0. DJango Local Setting.md
+++ b/2. Web/2. django/0. DJango Local Setting.md
@@ -4,7 +4,7 @@
 >
 > 0930 전체적으로 수정
 
-[pyenv github](<https://github.com/pyenv/pyenv>)
+~~[pyenv github](<https://github.com/pyenv/pyenv>)~~
 
 [pyenv-win github](<https://github.com/pyenv-win/pyenv-win>)
 
@@ -17,9 +17,11 @@ pip install pyenv-win --target $HOME/.pyenv
 환경변수 > 위에 창에 Path > 편집 
 
 ```
-C:\Users\student\.pyenv\pyenv-win\shims
-C:\Users\student\.pyenv\pyenv-win\bin
+%USERPROFILE%\.pyenv\pyenv-win\bin
+%USERPROFILE%\.pyenv\pyenv-win\shims
 ```
+
+*주의!!*  2019년 5월 윈도우 업데이트를 한 경우 `%USERPROFILE%\AppData\Local\Microsoft\WindowsApps` 위에 넣어야 한다.
 
 gitbash를 다시 열어주고 아래 명령어로 버전을 확인해준다.
 
@@ -30,11 +32,13 @@ pyenv rehash
 
 pyenv치면 정보가 뜬다.
 
+아래 명령어를 입력해 pyenv환경에 python을 설치해준다. (3.7.2 혹은 원하는 버전)
+
 ```bash
 pyenv install 3.7.2
 ```
 
-아래 명령어로 버전 확인
+아래 명령어로 버전 확인하면 사용가능한 python 버전이 뜬다.
 
 ```bash
 pyenv versions
@@ -43,10 +47,10 @@ pyenv versions
 bash_profile에 아래 내용 복사.
 
 ```bash
-export PATH="/c/Users/student/.pyenv/bin:$PATH"
+export PATH="/c/Users/[사용자이름]/.pyenv/bin:$PATH"
 ```
 
-***시스템 변수의 Path에 python 경로 설정이 되어있다면 지워준다.
+(이유모름.. 일단 보류 버전이 여러개면 충돌이 일어날 수 있어서 그럴지도)***시스템 변수의 Path에 python 경로 설정이 되어있다면 지워준다. 
 
 ```bash
 python -V
@@ -57,10 +61,6 @@ python -V
 이후
 
 ```bash
-pyenv install 3.7.2
-pyenv global 3.7.2
-pyenv rehash
-python -V
 ===가상환경 원하는 폴더에서===
 python -m venv django-venv
 cd django-venv
@@ -79,7 +79,7 @@ pip install -r requirement.txt
 
 
 
-![dj_local1](image/dj_local1.JPG)
+![dj_local1](../../image/dj_local1.JPG)
 
 
 
